Fix: Highlight z-index

--- a/styles/main.css
+++ b/styles/main.css
@@ -78,7 +78,7 @@ textarea:focus {
 .highlight-medium,
 .highlight-long {
     position: relative;
-    z-index: 0;
+    z-index: -1;
 }
 
 .highlight-short::after {
